[package]
name = "mem"
version = "0.1.0"
edition = "2021"
description = "A markdown-based knowledge tracking CLI for projects"
license = "MIT"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Timestamps
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
